# Testbench

./: .gitignore  README.md  Untitled.ipynb  init.sh  init_aws.sh  init_vcpkg.sh  vcpkg_package_list.txt
AwsCloudFormationSamples/00_CreateEc2/: createEc2.cform  deploy.py
CppSamples/: CMakeLists.txt  Untitled.ipynb
CppSamples/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
CppSamples/imgui/: CMakeLists.txt
CppSamples/pyscripts/helpers/: __init__.py
CppSamples/pyscripts/helpers/.ipynb_checkpoints/: __init__-checkpoint.py
CppSamples/tests/: CMakeLists.txt  concurrency.cpp  immer.cpp
CppSamples/tests/lib/: active_object.cpp
CppSamples/utils/: CMakeLists.txt
CsSamples/CSharpBits/: CSharpBits.sln  Untitled.ipynb
CsSamples/CSharpBits/Tests/: Concurrency.cs  EntityFramework.cs  GlobalFixture.cs  Interop.cs  SocketNetworking.cs  Tests.csproj  XmlSerialization.cs
CsSamples/CSharpBits/Tests/Migrations/: 20221003224542_InitialCreate.Designer.cs  20221003224542_InitialCreate.cs  BloggingContextModelSnapshot.cs
CsSamples/CSharpBits/pyscripts/helpers/: __init__.py
CsSamples/SampleCliTool/: SampleCliTool.sln
CsSamples/SampleCliTool/CLI/: CLI_Tool.csproj  Program.cs
CsSamples/SampleCliTool/GbUtil/: ScopeGuard.cs
CsSamples/SampleCliTool/Tests/: ConsoleRunner.cs  Tests.csproj  UnitTest1.cs
RustSamples/LanguageFeatures/: Cargo.toml
RustSamples/LanguageFeatures/src/: tests.rs
RustSamples/LanguageFeatures/src/tests/: asynchronous.rs  borrowing.rs  cryptography.rs  errors.rs  functional.rs  functions.rs  hashmap.rs  http_client.rs  parallelism.rs  pattern_matching.rs  random.rs  refs.rs  strings.rs  structs.rs  timing.rs  vectors.rs
RustSamples/ctrlc_basic_handler/: Cargo.toml
RustSamples/ctrlc_basic_handler/src/: main.rs
scripts/testbench/: __init__.py
scripts/testbench/aws/: __init__.py
scripts/testbench/cpp/: __init__.py
(+4 files in other folders)
